# voice-input

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: design.md
docs/nanobot-analysis/: index.md  nanobot-project-analysis.md
docs/superpowers/plans/: 2026-04-17-voice-input.md  2026-04-21-stt-api-backends.md  2026-04-22-sensevoice-local-engine.md  2026-04-26-sherpa-onnx-migration.md
docs/superpowers/specs/: 2026-04-21-stt-api-backends-design.md  2026-04-22-sensevoice-local-engine-design.md  2026-04-26-sherpa-onnx-migration-design.md
packaging/arch/: PKGBUILD
packaging/systemd/: voice-input.service
packaging/udev/: 99-voice-input.rules
src/voice_input/: __main__.py  app.py  audio.py  config.py  hotkey.py  injector.py  keyring_helper.py  llm.py  overlay.py  settings_dialog.py  tray.py  whisper_worker.py
src/voice_input.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/voice_input/asr/: model_manager.py  vad.py
src/voice_input/backends/: __init__.py  base.py  google_speech.py  local_whisper.py  openai_whisper.py  registry.py  sherpa_backend.py  volcengine_speech.py
src/voice_input/backends/local/: __init__.py  engine.py  sensevoice_engine.py  whisper_engine.py
src/voice_input/postprocess/: llm.py  pipeline.py  scene.py
src/voice_input/resources/: voice-input.desktop
tests/: conftest.py  test_app.py  test_audio.py  test_backend_factory.py  test_backend_google.py  test_backend_local_whisper.py  test_backend_openai.py  test_backend_registry.py  test_backend_volcengine.py  test_backends_base.py  test_config.py  test_hotkey.py  test_injector.py  test_integration_stt.py  test_llm.py  test_local_backend.py  test_local_engine.py  test_model_manager.py  test_pipeline.py  test_postprocess_llm.py  test_scene.py  test_sensevoice_engine.py  test_settings_dialog.py  test_sherpa_backend.py  test_vad.py  test_whisper_engine.py  test_whisper_worker.py
