[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "voice-input"
version = "0.1.0"
description = "KDE Plasma 6 Wayland voice input via system tray"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "sounddevice>=0.4",
    "faster-whisper>=1.0",
    "dbus-next>=0.2",
    "httpx>=0.27",
    "qasync>=0.27",
    "keyring>=25.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.3"]

[project.scripts]
voice-input = "voice_input.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
