[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-input"
version = "0.1.0"
description = "KDE Plasma 6 Wayland voice input via system tray"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "sounddevice>=0.4",
    "dbus-next>=0.2",
    "httpx>=0.27",
    "socksio>=1.0",
    "qasync>=0.27",
    "keyring>=25.0",
    "numpy>=1.24",
    "websockets>=12.0",
    "tomli>=2.0; python_version < '3.12'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-qt>=4.3", "pytest-asyncio>=0.23"]
google = ["google-auth>=2.0"]
whisper = ["faster-whisper>=1.0"]
sensevoice = ["funasr", "modelscope"]
local-all = ["faster-whisper>=1.0", "funasr", "modelscope"]
all-stt = ["google-auth>=2.0", "faster-whisper>=1.0", "funasr", "modelscope"]

[project.scripts]
voice-input = "voice_input.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
